test/parse/strict/bad/twostatuslines.sol
comment
s SATISFIABLE
c here comes the second status line
s SATISFIABLE
